refactor: 상수 추가, 컨벤션 수정